--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ make-smaller-titles: true
         <div class="col-md-12 main content-panel">
 
             <!-- <div class="gravatar"> -->
-                <!-- <img src="{{ site.title_image }}" class="img-circle about-image" height="150" width="150" alt="{{ site.title }}" /> -->
+            <!-- <img src="{{ site.title_image }}" class="img-circle about-image" height="150" width="150" alt="{{ site.title }}" /> -->
             <!-- </div> -->
 
             <h1 class="header author-header" itemprop="headline">{{ site.title }}</h1>
@@ -19,27 +19,44 @@ make-smaller-titles: true
                 {{ site.title_description }}
             </div>
 
+            <div class="row">
+
+                <div class="col-md-4 text-center">
+                    <a href="{{ site.baseurl }}/social/" class="category-links"><i class="fa fa-social"></i> Social</a>
+                </div>
+                <div class="col-md-4 text-center">
+                    <a href="{{ site.baseurl }}/ai/" class="category-links"><i class="fa fa-ai"></i> Artificial Intelligence</a>
+                </div>
+                <div class="col-md-4 text-center">
+                    <a href="{{ site.baseurl }}/ai/" class="category-links"><i class="fa fa-ai"></i> Artificial Intelligence</a>
+                </div>
+            </div>
+            <!--            <div class="category-links">-->
+            <!--                <a href="{{ site.baseurl }}/social/"><i class="fa fa-social"></i> Social</a>-->
+            <!--                <a href="{{ site.baseurl }}/ai/"><i class="fa fa-ai"></i> Artificial Intelligence</a>-->
+            <!--            </div>-->
+
             {% include social_links.html %}
-          </div>
-          <div class="col-md-12 main content-panel">
+        </div>
+        <div class="col-md-12 main content-panel">
 
             <div class="articles">
 
-              <h2>Latest Articles</h2>
+                <h2>Latest Articles</h2>
 
-              <ul>
-                  {% for post in site.posts limit: site.post_limit %}
+                <ul>
+                    {% for post in site.posts limit: site.post_limit %}
 
-                      <li>
-                          <a href="{{ post.url | prepend: site.baseurl }}">{{ post.title }}</a>
-                          <small class="hidden-xs">{{ post.date | date: "%B %-d, %Y" }}</small>
-                      </li>
+                    <li>
+                        <a href="{{ post.url | prepend: site.baseurl }}">{{ post.title }}</a>
+                        <small class="hidden-xs">{{ post.date | date: "%B %-d, %Y" }}</small>
+                    </li>
 
-                  {% endfor %}
-                  <li>
-                      <small><i><a href="{{ site.baseurl }}/posts/">more...</a></i></small>
-                  </li>
-              </ul>
+                    {% endfor %}
+                    <li>
+                        <small><i><a href="{{ site.baseurl }}/posts/">more...</a></i></small>
+                    </li>
+                </ul>
 
             </div>
 
